--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
 language: cpp
-compiler: gcc
-before_script: ./trunk/linux-prepare
-script: ./trunk/linux-build
+compiler:
+  - gcc
+  - clang
+script: cmake trunk/application && make
+notifications:
+  recipients:
+    - gorlov.maxim@gmail.com
+  email:
+    on_success: change
+    on_failure: always
