--- a/trunk/sensors/memory/CMakeLists.txt
+++ b/trunk/sensors/memory/CMakeLists.txt
@@ -1,17 +1,12 @@
 # %Id%
-PROJECT(mon-sensor-memory)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-SET( EXECUTABLE_NAME memory )
-
 include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 SET(mon-sensor-memory-sources
     src/main.cpp)
-
 SET(mon-sensor-memory-headers
     src/main.cpp)
-
 SET(include_dirs
     src)
 
-add_sensor(${mon-sensor-memory-sources} ${mon-sensor-memory-headers} ${include_dirs})
+add_sensor(mon-sensor-memory memory ${mon-sensor-memory-sources} ${mon-sensor-memory-headers} ${include_dirs})
