--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 compiler: clang
-script: cmake trunk/application && make
+script: cmake -DMON_USE_CLANG=ON trunk/application && make
 notifications:
   recipients:
     - gorlov.maxim@gmail.com
