Сборка всего починена

--- a/trunk/sensors/cpu/CMakeLists.txt
+++ b/trunk/sensors/cpu/CMakeLists.txt
@@ -1,6 +1,9 @@
 # %Id%
-include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
+set(EXECUTABLE_NAME cpu)
+include(${CMAKE_INSTALL_PREFIX}/include/mon/CMakeCompiler.cmake)
+PROJECT(mon-sensor-cpu)
+include (${CMAKE_INSTALL_PREFIX}/include/mon/CMakeSensor.cmake)
 
 SET(mon-sensor-memory-sources
     src/main.cpp)
@@ -9,4 +12,4 @@ SET(mon-sensor-memory-headers
 SET(include_dirs
     src)
 
-add_sensor(mon-sensor-cpu cpu ${mon-sensor-memory-sources} ${mon-sensor-memory-headers} ${include_dirs})
+add_sensor(${mon-sensor-memory-sources} ${mon-sensor-memory-headers} ${include_dirs})
