Не помню что делал

--- a/trunk/application/utils/confgen/example/hosts.conf
+++ b/trunk/application/utils/confgen/example/hosts.conf
@@ -1,1 +1,4 @@
-pc0019 { ip="10.0.1.19"; mac="94:de:80:7c:8b:ee"; names=["pc-0019","asu","gorlov","hb-e2-asu"]; }
+[
+    { ip="10.0.1.19";  mac="94:de:80:7c:8b:ee"; names=["pc-0019","asu","gorlov","hb-e2-asu"]; },
+    { ip="10.0.1.101"; mac="50:46:5d:4e:ed:b0"; names=["pc-0101"]; }
+]
